gccida/g1/gen_split_1232
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/insn-emit.c:17276:44: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
*( _WORD *)operands[1] = swap_condition( ( rtx_code)*( _WORD *)operands[1]); 
                                           ^~~~~~~~
                                           rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/insn-emit.c:17276:53: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
*( _WORD *)operands[1] = swap_condition( ( rtx_code)*( _WORD *)operands[1]); 
                                         ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/insn-emit.c:17278:37: error: use of undeclared identifier 'machine_mode'
if ( const0_operand( operands[2], ( machine_mode)*( ( unsigned __int8 *)*operands + 2)) ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/insn-emit.c:17295:17: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v8 = gen_rtx( ( rtx_code)*( _WORD *)v3, ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v7, v4); 
                ^~~~~~~~
                rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/insn-emit.c:17295:26: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v8 = gen_rtx( ( rtx_code)*( _WORD *)v3, ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v7, v4); 
              ~~~~~~~~~~~^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/insn-emit.c:17295:43: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx( ( rtx_code)*( _WORD *)v3, ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v7, v4); 
                                          ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_1232/src/obj/insn-emit.o] Error 1
